Fixed Resume spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -538,6 +538,3 @@ ul {
     text-align: left;
 }
 
-.top-button{
-    color: white;
-}
